kubernetes/yaml/01_common-config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: default
  labels:
    name: mongodb-svc
    app: kuberneteth
    tier: backend
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: kuberneteth
    tier: backend
    name: mongodb-deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuberneteth
      tier: backend
      name: mongodb-deployment
  template:
    metadata:
      labels:
        app: kuberneteth
        tier: backend
        name: mongodb-deployment
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: mongodb
          containerPort: 27017
        volumeMounts:
        - name: mongodb-persistent-storage
          mountPath: /data/db
      volumes:
      - name: mongodb-persistent-storage
        persistentVolumeClaim:
          claimName: volume-mongodb
---
