kubernetes/yaml/02_bootnodes.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: geth-bootnode-svc
  labels:
    app: bootnode
    tier: backend
    name: geth-bootnode-svc
spec:
  selector:
    app: bootnode
    tier: backend
    name: bootnode
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - name: geth-bootnode-ipc-discovery
      protocol: UDP
      port: 30303
      targetPort: 30303

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: default
  name: geth-boot-node-setup-pod
  labels:
    app: bootnode
    name: bootnode-setup-pod
spec:
  selector:
    matchLabels:
      app: bootnode
      name: bootnode-setup-pod
  template:
    metadata:
      labels:
        app: bootnode
        name: bootnode-setup-pod
    spec:
      containers:
      - name: geth-boot-node-setup-container
        image: vxmkz/geth-bootnode:alltools-v1.10.26
        imagePullPolicy: IfNotPresent
        command: [ "sh" ]
        args:
        - "-cx"
        - "cd /etc/testnet/bootnode;
           echo \"091bd6067cb4612df85d9c1ff85cc47f259ced4d4cd99816b14f35650f59c322\" > nodekeyhex;
           cat nodekeyhex;
           echo \"enode://$(/usr/local/bin/bootnode -nodekey nodekeyhex -writeaddress)@$GETH_BOOTNODE_SVC_SERVICE_HOST:30303\" > enode.address;
           set +x;
           while true; do :; done;"
        volumeMounts:
        - name: geth-boot-node-persistent-storage
          mountPath: /etc/testnet/bootnode
      volumes:
      - name: geth-boot-node-persistent-storage
        hostPath:
          path: /var/lib/docker/geth-storage/bootnode

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: default
  name: geth-bootnode
  labels:
    app: bootnode
    tier: backend
    name: geth-bootnode
spec:
  selector:
    matchLabels:
      app: bootnode
  replicas: 1
  serviceName: geth-bootnode
  template:
    metadata:
      name: geth-bootnode
      labels:
        app: bootnode
        tier: backend
        name: bootnode
    spec:
      containers:
      - name: geth-bootnode-container
        image: vxmkz/geth-bootnode:alltools-v1.10.26
        imagePullPolicy: IfNotPresent
        command: [ "sh" ]
        args:
        - "-cx"
        - "cd /etc/testnet/bootnode;
          /usr/local/bin/geth --datadir /etc/testnet/bootnode init /etc/geth/genesis/genesis-geth.json;
          touch /etc/testnet/bootnode/genesis_created;
          echo 123 > /etc/testnet/bootnode/password.txt;
          mkdir -p /etc/geth/bootnode;
          cp /etc/gethconfigmap/bootnode/gethconfig.toml /etc/geth/bootnode;
          /usr/local/bin/geth \
          --verbosity 3  \
          --nodekey /etc/testnet/bootnode/nodekeyhex \
          --config /etc/geth/bootnode/gethconfig.toml;"
        volumeMounts:
        - name: bootnode-persistent-storage
          mountPath: /etc/testnet/bootnode/storage
        - name: bootnode-config-persistent-storage
          mountPath: /etc/gethconfigmap/bootnode
        - name: keystore-config-persistent-storage
          mountPath: /etc/testnet/bootnode/keystore/UTC--2019-06-04T13-53-06.513321284Z--1e2510200cc63faf248150530d16415a52757f50
          subPath: UTC--2019-06-04T13-53-06.513321284Z--1e2510200cc63faf248150530d16415a52757f50
        - name: geth-boot-node-persistent-storage
          mountPath: /etc/testnet/bootnode
        - name: genesis-config-persistent-storage
          mountPath: /etc/geth/genesis/genesis-geth.json
          subPath: genesis-geth.json
      volumes:
      - name: keystore-config-persistent-storage
        configMap:
          name: keystore-config-bootnode
          items:
          - key: UTC--2019-06-04T13-53-06.513321284Z--1e2510200cc63faf248150530d16415a52757f50
            path: UTC--2019-06-04T13-53-06.513321284Z--1e2510200cc63faf248150530d16415a52757f50
      - name: geth-boot-node-persistent-storage
        hostPath:
          path: /var/lib/docker/geth-storage/bootnode
      - name: genesis-config-persistent-storage
        configMap:
          name: genesis-config
          items:
          - key: genesis-geth.json
            path: genesis-geth.json
      - name: bootnode-persistent-storage
        persistentVolumeClaim:
          claimName: volume-bootnode
      - name: bootnode-config-persistent-storage
        configMap:
          name: gethconfig-bootnode
          items:
          - key: gethconfig
            path: gethconfig.toml
---
