kubernetes/yaml/03_nodes.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: miner01-svc
  namespace: default
  labels:
    app: miner
    tier: backend
    name: miner01-svc
spec:
  selector:
    app: miner
    tier: backend
    name: miner01
  ports:
    - name: miner01-jsonrpc
      protocol: TCP
      port: 8545
      targetPort: 8545
    - name: miner01-wsrpc
      protocol: TCP
      port: 8546
      targetPort: 8546
    
    
    - name: miner01-ipc-discovery
      protocol: TCP
      port: 30303
      targetPort: 30303
    
    
    - name: miner01-dashboard
      protocol: TCP
      port: 8080
      targetPort: 8080
    
---
apiVersion: v1
kind: Service
metadata:
  name: miner02-svc
  namespace: default
  labels:
    app: miner
    tier: backend
    name: miner02-svc
spec:
  selector:
    app: miner
    tier: backend
    name: miner02
  ports:
    - name: miner02-jsonrpc
      protocol: TCP
      port: 8545
      targetPort: 8545
    - name: miner02-wsrpc
      protocol: TCP
      port: 8546
      targetPort: 8546
    
    
    - name: miner02-ipc-discovery
      protocol: TCP
      port: 30303
      targetPort: 30303
    
    
    - name: miner02-dashboard
      protocol: TCP
      port: 8080
      targetPort: 8080
    
---
apiVersion: v1
kind: Service
metadata:
  name: miner03-svc
  namespace: default
  labels:
    app: miner
    tier: backend
    name: miner03-svc
spec:
  selector:
    app: miner
    tier: backend
    name: miner03
  ports:
    - name: miner03-jsonrpc
      protocol: TCP
      port: 8545
      targetPort: 8545
    - name: miner03-wsrpc
      protocol: TCP
      port: 8546
      targetPort: 8546
    
    
    - name: miner03-ipc-discovery
      protocol: TCP
      port: 30303
      targetPort: 30303
    
    
    - name: miner03-dashboard
      protocol: TCP
      port: 8080
      targetPort: 8080
    

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: default
  labels:
    app: miner
    tier: backend
    name: geth-miner01
  name: geth-miner01
spec:
  selector:
    matchLabels:
      app: miner
  replicas: 1
  serviceName: geth-miner01
  template:
    metadata:
      name: geth-miner01
      labels:
        app: miner
        tier: backend
        name: miner01
    spec:
      containers:
      - name: miner01-container
        image: ethereum/client-go:v1.9.0
        imagePullPolicy: Always
        command: [ "sh" ]
        args:
        - "-cx"
        - "/usr/local/bin/geth --datadir /etc/testnet/miner01 init /etc/geth/genesis/genesis-geth.json;
           touch /etc/testnet/miner01/genesis_created;
           echo 123 > /etc/testnet/miner01/password.txt;
           mkdir -p /etc/geth/miner01;
           cp /etc/gethconfigmap/miner01/gethconfig.toml /etc/geth/miner01;
        
           ENODE=$(cat /etc/testnet/bootnode/enode.address);
           ENODE_ESC=$(echo $ENODE | sed 's@//@\\\\/\\\\/@g');
           sed -i \"s/BootstrapNodes = \\[\\]/BootstrapNodes = [\\\"$ENODE_ESC\\\"]/g\" /etc/geth/miner01/gethconfig.toml;
           sed -i \"s/BootstrapNodesV5 = \\[\\]/BootstrapNodesV5 = [\\\"$ENODE_ESC\\\"]/g\" /etc/geth/miner01/gethconfig.toml;
        
           /usr/local/bin/geth \
           --dashboard \
           --mine \
           --verbosity 3  \
           --unlock 0xc11ba4c7c24f70e7a581c7daa92eac108099acec --allow-insecure-unlock --password /etc/testnet/miner01/password.txt --gasprice '0x0' --targetgaslimit '9000000000000'  \
           --config /etc/geth/miner01/gethconfig.toml;"
        ports:
          - containerPort: 8545
          - containerPort: 8546
          
            protocol: UDP
          - containerPort: 30303
        volumeMounts:
        - name: miner01-persistent-storage
          mountPath: /etc/testnet/miner01
        - name: miner01-config-persistent-storage
          mountPath: /etc/gethconfigmap/miner01
        - name: keystore-config-persistent-storage
          mountPath: /etc/testnet/miner01/keystore/UTC--2019-06-04T13-52-41.551926270Z--c11ba4c7c24f70e7a581c7daa92eac108099acec
          subPath: UTC--2019-06-04T13-52-41.551926270Z--c11ba4c7c24f70e7a581c7daa92eac108099acec
        - name: geth-boot-node-persistent-storage
          mountPath: /etc/testnet/bootnode
        - name: genesis-config-persistent-storage
          mountPath: /etc/geth/genesis/genesis-geth.json
          subPath: genesis-geth.json
      volumes:
      - name: keystore-config-persistent-storage
        configMap:
          name: keystore-config-miner01
          items:
          - key: UTC--2019-06-04T13-52-41.551926270Z--c11ba4c7c24f70e7a581c7daa92eac108099acec
            path: UTC--2019-06-04T13-52-41.551926270Z--c11ba4c7c24f70e7a581c7daa92eac108099acec
    
      - name: geth-boot-node-persistent-storage
        hostPath:
          path: /var/lib/docker/geth-storage/bootnode
      - name: genesis-config-persistent-storage
        configMap:
          name: genesis-config
          items:
          - key: genesis-geth.json
            path: genesis-geth.json
      - name: miner01-persistent-storage
        persistentVolumeClaim:
          claimName: volume-miner01
      - name: miner01-config-persistent-storage
        configMap:
          name: gethconfig-miner01
          items:
          - key: gethconfig
            path: gethconfig.toml
    
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: default
  labels:
    app: miner
    tier: backend
    name: geth-miner02
  name: geth-miner02
spec:
  selector:
    matchLabels:
      app: miner
  replicas: 1
  serviceName: geth-miner02
  template:
    metadata:
      name: geth-miner02
      labels:
        app: miner
        tier: backend
        name: miner02
    spec:
      containers:
      - name: miner02-container
        image: ethereum/client-go:v1.9.0
        imagePullPolicy: Always
        command: [ "sh" ]
        args:
        - "-cx"
        - "/usr/local/bin/geth --datadir /etc/testnet/miner02 init /etc/geth/genesis/genesis-geth.json;
           touch /etc/testnet/miner02/genesis_created;
           echo 123 > /etc/testnet/miner02/password.txt;
           mkdir -p /etc/geth/miner02;
           cp /etc/gethconfigmap/miner02/gethconfig.toml /etc/geth/miner02;
        
           ENODE=$(cat /etc/testnet/bootnode/enode.address);
           ENODE_ESC=$(echo $ENODE | sed 's@//@\\\\/\\\\/@g');
           sed -i \"s/BootstrapNodes = \\[\\]/BootstrapNodes = [\\\"$ENODE_ESC\\\"]/g\" /etc/geth/miner02/gethconfig.toml;
           sed -i \"s/BootstrapNodesV5 = \\[\\]/BootstrapNodesV5 = [\\\"$ENODE_ESC\\\"]/g\" /etc/geth/miner02/gethconfig.toml;
        
           /usr/local/bin/geth \
           --dashboard \
           --mine \
           --verbosity 3  \
           --unlock 0x4c92786b90d848eaa3f4ef46918af724a309ae79 --allow-insecure-unlock --password /etc/testnet/miner02/password.txt --gasprice '0x0' --targetgaslimit '9000000000000'  \
           --config /etc/geth/miner02/gethconfig.toml;"
        ports:
          - containerPort: 8545
          - containerPort: 8546
          
            protocol: UDP
          - containerPort: 30303
        volumeMounts:
        - name: miner02-persistent-storage
          mountPath: /etc/testnet/miner02
        - name: miner02-config-persistent-storage
          mountPath: /etc/gethconfigmap/miner02
        - name: keystore-config-persistent-storage
          mountPath: /etc/testnet/miner02/keystore/UTC--2019-06-04T13-52-48.511656735Z--4c92786b90d848eaa3f4ef46918af724a309ae79
          subPath: UTC--2019-06-04T13-52-48.511656735Z--4c92786b90d848eaa3f4ef46918af724a309ae79
        - name: geth-boot-node-persistent-storage
          mountPath: /etc/testnet/bootnode
        - name: genesis-config-persistent-storage
          mountPath: /etc/geth/genesis/genesis-geth.json
          subPath: genesis-geth.json
      volumes:
      - name: keystore-config-persistent-storage
        configMap:
          name: keystore-config-miner02
          items:
          - key: UTC--2019-06-04T13-52-48.511656735Z--4c92786b90d848eaa3f4ef46918af724a309ae79
            path: UTC--2019-06-04T13-52-48.511656735Z--4c92786b90d848eaa3f4ef46918af724a309ae79
    
      - name: geth-boot-node-persistent-storage
        hostPath:
          path: /var/lib/docker/geth-storage/bootnode
      - name: genesis-config-persistent-storage
        configMap:
          name: genesis-config
          items:
          - key: genesis-geth.json
            path: genesis-geth.json
      - name: miner02-persistent-storage
        persistentVolumeClaim:
          claimName: volume-miner02
      - name: miner02-config-persistent-storage
        configMap:
          name: gethconfig-miner02
          items:
          - key: gethconfig
            path: gethconfig.toml
    
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: default
  labels:
    app: miner
    tier: backend
    name: geth-miner03
  name: geth-miner03
spec:
  selector:
    matchLabels:
      app: miner
  replicas: 1
  serviceName: geth-miner03
  template:
    metadata:
      name: geth-miner03
      labels:
        app: miner
        tier: backend
        name: miner03
    spec:
      containers:
      - name: miner03-container
        image: ethereum/client-go:v1.9.0
        imagePullPolicy: Always
        command: [ "sh" ]
        args:
        - "-cx"
        - "/usr/local/bin/geth --datadir /etc/testnet/miner03 init /etc/geth/genesis/genesis-geth.json;
           touch /etc/testnet/miner03/genesis_created;
           echo 123 > /etc/testnet/miner03/password.txt;
           mkdir -p /etc/geth/miner03;
           cp /etc/gethconfigmap/miner03/gethconfig.toml /etc/geth/miner03;
        
           ENODE=$(cat /etc/testnet/bootnode/enode.address);
           ENODE_ESC=$(echo $ENODE | sed 's@//@\\\\/\\\\/@g');
           sed -i \"s/BootstrapNodes = \\[\\]/BootstrapNodes = [\\\"$ENODE_ESC\\\"]/g\" /etc/geth/miner03/gethconfig.toml;
           sed -i \"s/BootstrapNodesV5 = \\[\\]/BootstrapNodesV5 = [\\\"$ENODE_ESC\\\"]/g\" /etc/geth/miner03/gethconfig.toml;
        
           /usr/local/bin/geth \
           --dashboard \
           --mine \
           --verbosity 3  \
           --unlock 0x4e7afbdc9413eeb582b3f1be49d652fa714484da --allow-insecure-unlock --password /etc/testnet/miner03/password.txt --gasprice '0x0' --targetgaslimit '9000000000000'  \
           --config /etc/geth/miner03/gethconfig.toml;"
        ports:
          - containerPort: 8545
          - containerPort: 8546
          
            protocol: UDP
          - containerPort: 30303
        volumeMounts:
        - name: miner03-persistent-storage
          mountPath: /etc/testnet/miner03
        - name: miner03-config-persistent-storage
          mountPath: /etc/gethconfigmap/miner03
        - name: keystore-config-persistent-storage
          mountPath: /etc/testnet/miner03/keystore/UTC--2019-06-04T13-52-53.567362092Z--4e7afbdc9413eeb582b3f1be49d652fa714484da
          subPath: UTC--2019-06-04T13-52-53.567362092Z--4e7afbdc9413eeb582b3f1be49d652fa714484da
        - name: geth-boot-node-persistent-storage
          mountPath: /etc/testnet/bootnode
        - name: genesis-config-persistent-storage
          mountPath: /etc/geth/genesis/genesis-geth.json
          subPath: genesis-geth.json
      volumes:
      - name: keystore-config-persistent-storage
        configMap:
          name: keystore-config-miner03
          items:
          - key: UTC--2019-06-04T13-52-53.567362092Z--4e7afbdc9413eeb582b3f1be49d652fa714484da
            path: UTC--2019-06-04T13-52-53.567362092Z--4e7afbdc9413eeb582b3f1be49d652fa714484da
    
      - name: geth-boot-node-persistent-storage
        hostPath:
          path: /var/lib/docker/geth-storage/bootnode
      - name: genesis-config-persistent-storage
        configMap:
          name: genesis-config
          items:
          - key: genesis-geth.json
            path: genesis-geth.json
      - name: miner03-persistent-storage
        persistentVolumeClaim:
          claimName: volume-miner03
      - name: miner03-config-persistent-storage
        configMap:
          name: gethconfig-miner03
          items:
          - key: gethconfig
            path: gethconfig.toml
