kubernetes/yaml/04_monitor.yaml


---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: monitor-svc
  labels:
    app: kuberneteth
    tier: frontend
    name: monitor-svc
spec:
  selector:
    app: kuberneteth
    tier: frontend

  ports:
    - name: monitor-port
      protocol: TCP
      port: 3001

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: default
  name: monitor
spec:
  selector:
    matchLabels:
      app: kuberneteth
  replicas: 1
  serviceName: monitor
  template:
    metadata:
      name: monitor
      labels:
        app: kuberneteth
        tier: frontend
        name: monitor
    spec:
      containers:
      - name: eth-netstats-container
        image: ijsfd/eth-netstats
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3001
      - name: eth-net-intelligence-api-container
        image: ijsfd/eth-net-intelligence-api
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: monitor-config-persistent-storage
          mountPath: /eth-net-intelligence-api/app.json
          subPath: app.json
      volumes:
      - name: monitor-configmap-volume
        configMap:
          name: monitor-config
          items:
          - key: app.json
            path: app.json
      - name: monitor-config-persistent-storage
        persistentVolumeClaim:
          claimName: volume-ethmonitor
---
