kubernetes/yaml/05_explorer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: explorer-svc
  namespace: default
  labels:
    app: kuberneteth
    tier: frontend
    name: explorer-svc
spec:
  selector:
    app: kuberneteth
    tier: frontend
    name: explorer

  ports:
    - name: explorer-port
      protocol: TCP
      port: 3000

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: default
  name: explorer
spec:
  selector:
    matchLabels:
      app: kuberneteth
  replicas: 1
  serviceName: explorer
  template:
    metadata:
      name: explorer
      labels:
        app: kuberneteth
        tier: frontend
        name: explorer
    spec:
      containers:
      - name: explorer
        image: ijsfd/explorer:latest
        imagePullPolicy: IfNotPresent
        command: [ "sh" ]
        args:
        - "-cx"
        - "cp -f /explorer-configmap/config.json /explorer/config.json;
           sed -i \"s/miner01-rpchost/$MINER01_SVC_SERVICE_HOST/g\" /explorer/config.json;
           npm start app.js;
           exit 0;"
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: explorer-configmap-volume
          mountPath: /explorer-configmap/config.json
          subPath: config.json
      volumes:
      - name: explorer-configmap-volume
        configMap:
          name: explorer-config
          items:
          - key: config.json
            path: config.json
---
