kubernetes/yaml/06_explorer.yaml
apiVersion: v1
kind: Service
metadata:
  name: blockkube-x-svc
  namespace: default
  labels:
    app: blockkube-x
spec:
  selector:
    app: blockkube-x
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: default
  name: blockkube-x
spec:
  serviceName: "blockkube-x"
  replicas: 1
  selector:
    matchLabels:
      app: blockkube-x
  template:
    metadata:
      labels:
        app: blockkube-x
    spec:
      containers:
      - name: blockkube-x
        image: vxmkz/blockkube-x:latest
        ports:
        - containerPort: 3000
