kubernetes/yaml/05_monitor.yaml


---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: monitor-svc
  labels:
    app: kuberneteth
    tier: frontend
    name: monitor-svc
    io.kompose.service: monitor
spec:
  selector:
    app: kuberneteth
    tier: frontend

  type: NodePort
  ports:
    - protocol: TCP
      port: 3001

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: default
  name: monitor
spec:
  selector:
    matchLabels:
      app: kuberneteth
  replicas: 1
  serviceName: monitor
  template:
    metadata:
      name: monitor
      labels:
        app: kuberneteth
        tier: frontend
        name: monitor
        io.kompose.service: monitor
    spec:
      containers:
      - name: eth-netstats-container
        image: ijsfd/eth-netstats
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3001
      - name: eth-net-intelligence-api-container
        image: ijsfd/eth-net-intelligence-api
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: monitor-config-persistent-storage
          mountPath: /eth-net-intelligence-api/app.json
          subPath: app.json
      volumes:
      - name: monitor-configmap-volume
        configMap:
          name: monitor-config
          items:
          - key: app.json
            path: app.json
      - name: monitor-config-persistent-storage
        persistentVolumeClaim:
          claimName: volume-ethmonitor
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: monitor.localhost
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: monitor-svc
            port:
              number: 3001
